# weather_project

./: .gitignore  Dockerfile  Dockerfile.migrate  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  migration_guide.md  pyproject.toml  requirements.txt  to_do.md
alembic/versions/: 356495c22319_create_hourly_weather_aggregates_table.py  e7117458292c_create_zipcodes_table.py
apis/geocoding/: lat_long.py  location_data.py  model.py
apis/nws/: points_data.py  weather_data.py
apis/open_meteo/: weather_data.py
apis/weather_data_normalizer/: models.py
apis/weatherapi/: weather_data.py
app/: config.py  database.py  main.py
app/config/: config.py
app/internal/: logger.py
app/models/: hourly_weather_aggregate.py  hourly_weather_aggregates.py  zip_code.py  zip_codes.py
app/routers/: health.py  weather.py
tests/: test_aggregator.py
