[project]
name = "weather-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "arrow==1.4.0",
    "black==25.9.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "idna==3.11",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.2.0",
    "requests==2.32.5",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wheel==0.45.1",
]
